welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- 0 to nums.length - 1)
               ^